[package]
name = "Evasion-Under-Blockchain-Sanctions"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2.1", features = ["full", "provider-trace-api", "provider-debug-api"] }
bb8 = { version = "0.8.5" }
bb8-postgres = { version = "0.8.1" }
clap = { version = "4.5.16", features = ["derive"] }
chrono = { version = "0.4.38"}
csv = {version = "1.3.0" }
dotenvy = { version = "0.15.7" }
eyre = { version = "0.6.12" }
nimiq-database = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-database-value = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-database-value-derive = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-serde = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-hash = { git = "https://github.com/nimiq/core-rs-albatross.git" }
parking_lot = { version = "0.12.3" }
serde_json = { version = "1.0.127" }
statrs = { version = "0.17.1" }
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4"] }
rand = { version = "0.8.4" }
rayon = { version = "1.10.0" }
rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }

[patch.crates-io]
alloy = { path = "/home/{$anonymous_author}/Documents/Projects/alloy/crates/alloy"}